[package]
name = "rotoclone-zone"
version = "0.1.0"
authors = ["Steven Goldberg"]
edition = "2018"

[dependencies]
#TODO rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["tls"] }
rocket = { git = "https://github.com/Rotoclone/Rocket", branch = "patch-1", features = ["tls"] }
serde = "1.0"
#TODO use this: hotwatch = "0.4.5"
chrono = { version = "0.4.19", features = ["serde"] }
toml = "0.5.8"
ordinal = "0.2.3"
pulldown-cmark = "0.8.0"
cached = "0.23.0"

[dependencies.rocket_contrib]
#TODO git = "https://github.com/SergioBenitez/Rocket"
#TODO branch = "master"
git = "https://github.com/rotoclone/Rocket"
branch = "patch-1"
default-features = false
features = ["tera_templates", "serve"]