[package]
name = "rotoclone-zone"
version = "0.1.0"
authors = ["Steven Goldberg"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1" }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
toml = "0.5.8"
ordinal = "0.2.3"
pulldown-cmark = "0.8.0"
hotwatch = "0.4.5"
anyhow = "1.0"
futures = "0.3"